# product_sourcing_agent

./: README.md  app.py  pyproject.toml  requirements.txt
src/product_sourcing_agent/: crew.py  main.py
src/product_sourcing_agent/config/: agents.yaml  tasks.yaml
